--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -1,8 +1,9 @@
 <%= @category %>
 
-
-<div class="row">
-	<div class="col-md-10 col-offset">
-
+<div id="content">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			
+		</div>
 	</div>
 </div>
