--- a/app/assets/stylesheets/bootstrap-narrow.css
+++ b/app/assets/stylesheets/bootstrap-narrow.css
@@ -26,6 +26,7 @@ body {
 
 /* Custom page footer */
 .footer {
+  margin-top: 50px;
   padding-top: 19px;
   color: #777;
   border-top: 1px solid $link-background;
