--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -1,9 +1,60 @@
 <%= @category %>
 
-<div id="content">
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=486427624802931";
+	fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<div id="content-container">
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
 			
+
+			<div class="row" id="content">
+
+			</div>
+
+			<div class="row">
+				<div class="col-md-4">
+					<a href="">
+						<button type="button" class="btn btn-danger btn-lg">
+							<span class="glyphicon glyphicon-thumbs-down"></span> Downvote
+						</button>	
+					</a>
+				</div>
+
+				<div class="col-md-4 middle">
+					<div class="row three-button-group">
+						<div class="fb-share-button" data-href="http://developers.facebook.com/docs/plugins/" data-type="button"></div>
+					</div>
+					<div class="row three-button-group">
+						<button type="button" class="btn btn-default btn-sm">
+						<span class="glyphicon glyphicon-star-empty"></span> Save
+						</button>
+					</div>
+					<div class="row three-button-group" id="report-link">
+						<a href=""> Report
+						</a>
+					</div>
+					
+				</div>
+
+
+				<div class="col-md-4">
+					<button type="button" class="btn btn-success btn-lg">
+						<span class="glyphicon glyphicon-thumbs-up"></span> Upvote
+					</button>
+					
+				</div>
+
+
+			</div>
+
+
 		</div>
 	</div>
 </div>
