--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,9 @@
 //background
 
 body {
+
 	background: $background;
+	
 	a {
 		color: $link-color;
 		&:hover {
@@ -32,23 +34,46 @@ body {
 	}
 }
 
-//header
-#upload-button {
-	color: #FFFFFF;
-	background-color: $link-color;
+
+.owl-message-box {
+	display: none;
+	line-height: $line-height-base * 1.2;
+	position: absolute;
+	width: 30%;
+	margin-left: -35%;
+	color: $link-color;
+	text-align: center;
+	background-color: $background;
+	border: 6px solid $link-color;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+	-webkit-box-shadow: 2px 2px 4px #888;
+	-moz-box-shadow: 2px 2px 4px #888;
+	box-shadow: 2px 2px 4px #888;
 }
 
+.owl-message {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	height: 100%;
+}
 
 .header {
-	
+	position: relative;
 	margin-bottom: 5em;
 	height: $header-height;
 	img {
 		height: $header-height - 20px;
 	}
 
-	.nav {
 
+	.nav {
+		//header
+		#upload-button {
+			color: #FFFFFF;
+			background-color: $link-color;
+		}
 		li {
 			a {
 				margin-top: $header-height / 2 - $font-size-base * $line-height-base;
@@ -62,7 +87,7 @@ body {
 					}
 				}
 			}
-			
+
 		}
 
 
@@ -87,8 +112,8 @@ body {
 			position: absolute;
 			margin-left: -14.5%; 
 			margin-top: 16%;
-			
-			
+
+
 		}
 		.second-category {
 			width: $category-button-width;
@@ -123,19 +148,28 @@ body {
 	}
 	.three-button-group {
 		margin: 0.5em;
+
 	}
 	#report-link {
-			margin-top: -0.5em;
+		margin-top: -0.5em;
 	}
 
 	.middle {
 		text-align: center;
-		
+
 	}
 
 	.btn-lg {
 		width: 9.7em;
 	}
+
+	#uploader {
+		margin-top: -1.5em;
+		margin-bottom: 2em;
+	}
+
+
+
 
 
 }
