some content changes and the algoirthm. its cray

--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -1,27 +1,12 @@
 <div id="categories">
 
 	<div class="row">
-		<a href="<%= view_path(:funny) %>">
-			<%= image_tag "funny-button.png" , class: "first-category" %>
-		</a>
-
-		<a href="<%= view_path(:random) %>">
-			<%= image_tag "randombutton.png", id: "random-button" %>
-		</a>
-
-		<a href="<%= view_path(:inspirational) %>">
-			<%= image_tag "inspirational-button.png", class: "second-category" %>
-		</a>
-	</div>
-
-
-	<div class="row">
-		<a href="<%= view_path(:cute) %>">
-			<%= image_tag "cute-button.png", class: "first-category" %>
-		</a>
-		<a href="<%= view_path(:weird) %>">
-			<%= image_tag "weird-button.png", class: "second-category"  %>
-		</a>
+		<a href="<%= view_path(:funny) %>" class="category-link">funny.</a>
+		<a href="<%= view_path(:cool) %>" class="category-link">cool.</a>
+		<a href="<%= view_path(:cute) %>" class="category-link">cute.</a>
+		<a href="<%= view_path(:weird) %>" class="category-link">weird.</a>
+		
+		<a href="<%= view_path(:random) %>" class="category-link random">random.</a>
 	</div>
 </div>
 
