--- a/app/views/dynamic_pages/upload.html.erb
+++ b/app/views/dynamic_pages/upload.html.erb
@@ -28,7 +28,7 @@
 				<%= label_tag :category %>
 			</div>
 			<div class="col-md-3">
-				<%= select_tag(:category, options_for_select([['Funny', 'funny'], ['Inspirational', 'inspirational'], ['Cute', 'cute'], ['Weird', 'weird'], ['Random', 'random']], 'random')) %>
+				<%= select_tag(:category, options_for_select([['Funny', 'funny'], ['Cool', 'cool'], ['Cute', 'cute'], ['Weird', 'weird'], ['Random', 'random']], 'random')) %>
 			</div>
 		</div>
 		
