--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -1,3 +1,7 @@
+<div class="doitmrw-ticker">
+	<div class="ticker-container">Should I <input class="form-control input-lg" type="text" id="ticker-field" />? Nah, <span>I'll doitmrw</span>.</div>
+</div>
+
 <div id="categories">
 
 	<div class="row">
