--- a/app/views/dynamic_pages/upload.html.erb
+++ b/app/views/dynamic_pages/upload.html.erb
@@ -29,7 +29,7 @@
 				<%= label_tag :title %>
 			</div>
 			<div class="col-md-3">
-				<%= text_field_tag :title %>
+				<%= text_field_tag :title, nil, class: "form-control" %>
 			</div>
 		</div>
 
@@ -56,7 +56,7 @@
 				<%= label_tag(:text, "URL") %>
 			</div>
 			<div class="col-md-3" id="textinput">
-				<%= text_field_tag :text %>
+				<%= text_field_tag :text, nil, class: "form-control" %>
 			</div>
 		</div>
 
