--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="doitmrw-ticker">
-	<div class="ticker-container">Should I <input class="form-control input-lg" type="text" id="ticker-field" />? Nah, <span>I'll doitmrw</span>.</div>
+	<div class="ticker-container">Should I <span id="ticker-field"></span>? Nah, <span>I'll doitmrw</span>.</div>
 </div>
 
 <div id="categories">
