--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 			</div>
 			<ul class="nav nav-pills pull-right">
 				<% if user_signed_in? -%>
-				<li><a href="#"><%= current_user.name %></a></li>
+				<li><a href="/users/<%= current_user.id %>"><%= current_user.name %></a></li>
 				<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 				<% else -%>
 				<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Log In".html_safe, user_omniauth_authorize_path(:facebook) %></li>
