--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -10,8 +10,18 @@
 
 <script type="text/javascript">
 //ajax requesting content
+
+	function styleText() {
+		$("#content").addClass("well");
+		$("#spinner").css("visibility", "hidden");
+	};
+	function unstyleText() {
+		$("#content").removeClass("well");
+		$("#spinner").css("visibility", "visible");
+	};
+
 	var id = -1;
-	var permalink = "default"
+	var permalink = "default";
 	function newContent() {
 		$('#content').html('');
 		$.ajax({ 
@@ -21,14 +31,22 @@
 			data: (id < 0) ? null : { content_id: id, like: $(this).attr('data-like') },
 			dataType: "json", 
 			success: function(response) {
+				unstyleText();
+
+
 				$("#content").html(response["to_html"]);
 				$("#uploader").html("<a href='/users/" + response["user_id"] + "'>" + response["uploader"] + "</a>");
 				id = response["id"];
 				permalink = response["permalink"];
 				$(".fb-share-button").attr("data-href", permalink);
+				if (response["type_id"] == 3) {
+					
+					styleText();
+				}
 			}
 		});
 	};
+
 	$(document).ready(function() {
 		
 		<% if @content == nil %>
@@ -40,28 +58,23 @@
 </script>
 
 
-
-
-
-
-
-
-
-
 <div id="content-container">
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
 
 			<div class="row">
-				<div id="spinner"><i class="fa fa-spinner fa-spin"></i></div>
-				<div id="content">
-					<% if @content  %>
-						<%= @content.html %>
-	 				<% end %>
-				</div>
+					
+					<div id="spinner"><i class="fa fa-spinner fa-spin"></i></div>
+					
+					<div id="content">
+						<% if @content  %>
+							<%= @content.html %>
+		 				<% end %>
+					</div>
+				
 			</div>
 
-			<div class="row" id="uploader">
+			<div id="uploader">
 			</div>
 
 			<div class="row">
