--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -7,12 +7,12 @@
 	<div class="row">
     <div class="category-links">
       <h3>get started:</h3>
-  		<a href="<%= view_path(:funny) %>" class="category-link btn btn-lg btn-info">funny.</a>
-  		<a href="<%= view_path(:cool) %>" class="category-link btn btn-lg btn-warning">cool.</a>
-  		<a href="<%= view_path(:cute) %>" class="category-link btn btn-lg btn-success">cute.</a>
-  		<a href="<%= view_path(:weird) %>" class="category-link btn btn-lg btn-danger">weird.</a>
+  		<a href="<%= view_path(:funny) %>" class="category-link btn btn-lg btn-info">funny</a>
+  		<a href="<%= view_path(:cool) %>" class="category-link btn btn-lg btn-warning">cool</a>
+  		<a href="<%= view_path(:cute) %>" class="category-link btn btn-lg btn-success">cute</a>
+  		<a href="<%= view_path(:weird) %>" class="category-link btn btn-lg btn-danger">weird</a>
   		<br />
-  		<a href="<%= view_path(:random) %>" class="category-link btn btn-lg random">random.</a>
+  		<a href="<%= view_path(:random) %>" class="category-link btn btn-lg random">random?</a>
     </div>
 	</div>
 </div>
