--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -6,7 +6,7 @@
 
 	<div class="row">
     <div class="category-links">
-      <h3>get started:</h3>
+      <h3>get lazy:</h3>
   		<a href="<%= view_path(:funny) %>" class="category-link btn btn-lg btn-info">funny</a>
   		<a href="<%= view_path(:cool) %>" class="category-link btn btn-lg btn-warning">cool</a>
   		<a href="<%= view_path(:cute) %>" class="category-link btn btn-lg btn-success">cute</a>
