--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,7 @@ body {
 		border: 1px solid #ddd;
 		padding: 4px 1px;
 		border-radius: 3px;
+		text-align: center;
 	}
 }
 
@@ -234,11 +235,17 @@ body {
 		margin-bottom: 2em;
 	}
 
-
-
-
-
 }
+
+//footer
+
+.selected {
+	pointer-events: none;
+   -moz-box-shadow:    inset 0 0 10px #333333;
+   -webkit-box-shadow: inset 0 0 10px #333333;
+   box-shadow:         inset 0 0 10px #333333;
+}
+
 
 
 
