--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,25 +14,19 @@
 	
 	<div class="container">
 		<div class="header">
-			<div class="owl-message-box">
-				<% flash.each do |key, value| %>
-					<%= content_tag(:p, value, class: "owl-message") %>
-				<% end %>
-			</div>
 			<ul class="nav nav-pills pull-right">
-				<% if user_signed_in? -%>
-				<li><a href="/users/<%= current_user.id %>"><%= current_user.name %></a></li>
-				<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+				<% if user_signed_in? && current_user.guest -%>
+					<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Log In".html_safe, user_omniauth_authorize_path(:facebook) %></li>
+					<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Sign Up".html_safe, user_omniauth_authorize_path(:facebook) %></li>
+				<% elsif user_signed_in? -%>
+					<li><a href="/users/<%= current_user.id %>"><%= current_user.name %></a></li>
+					<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 				<% else -%>
-				<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Log In".html_safe, user_omniauth_authorize_path(:facebook) %></li>
-				<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Sign Up".html_safe, user_omniauth_authorize_path(:facebook) %></li>
+					<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Log In".html_safe, user_omniauth_authorize_path(:facebook) %></li>
+					<li><%= link_to "<i class=\"fa fa-facebook-square\"></i> Sign Up".html_safe, user_omniauth_authorize_path(:facebook) %></li>
 				<% end -%>
 				<li>
-					<% if user_signed_in? -%>
 					<%= link_to "Upload", upload_path, id: "upload-button" %>
-					<% else -%>
-					<%= link_to "Upload", user_omniauth_authorize_path(:facebook), id: "upload-button" %>
-					<% end -%>
 				</li>
 			</ul>
 			<a href="/">
@@ -42,6 +36,10 @@
 			
 			
 		</div>
+		<% flash.each do |key, value| %>
+			<% type = {error: 'danger', success: 'success'}[key] -%>
+			<%= content_tag(:div, value, class: "alert alert-#{type}") %>
+		<% end %>
 
 
 		<%= yield %>
