--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-10 col-md-offset-1">
-		<h1><%= @user[0].name %></h1>
+		<h1><%= @user.name %></h1>
 
 		<div class="row">
 			<div class="col-md-3">
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="col-md-3">
-			<%= @user.length %>
+			<%= @edges.length %>
 			</div>
 
 		</div>
