--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -89,12 +89,16 @@ body {
 
 .header {
 	h1 {
-		margin-top: 1.5em;
-		letter-spacing: 1px;
+		letter-spacing: -0.1em;
+		font-weight: bold;
+		-webkit-font-smoothing: antialias;
+		color: #777;
+		margin-top: 1.0em;
 	};
 	position: relative;
 	margin-bottom: 1em;
 	height: $header-height;
+	overflow: hidden;
 	img {
 		height: $header-height - 20px;
 	}
@@ -245,11 +249,8 @@ body {
 
 .selected {
 	pointer-events: none;
-   -moz-box-shadow:    inset 0 0 10px #333333;
-   -webkit-box-shadow: inset 0 0 10px #333333;
-   box-shadow:         inset 0 0 10px #333333;
+	border-top-color: rgba(0,0,0,0.6);
+	-moz-box-shadow:    inset 0 2px 0 rgba(0,0,0,0.6);
+	-webkit-box-shadow: inset 0 2px 0 rgba(0,0,0,0.6);
+	box-shadow:         inset 0 2px 0 rgba(0,0,0,0.6);
 }
-
-
-
-
