--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,6 +94,8 @@ body {
 		-webkit-font-smoothing: antialias;
 		color: #777;
 		margin-top: 1.0em;
+		position: relative;
+		left: -0.4em;
 	};
 	position: relative;
 	margin-bottom: 1em;
