--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,6 +96,7 @@ body {
 		margin-top: 1.0em;
 		position: relative;
 		left: -0.4em;
+		display: inline-block;
 	};
 	position: relative;
 	margin-bottom: 1em;
