add back random

--- a/app/views/dynamic_pages/upload.html.erb
+++ b/app/views/dynamic_pages/upload.html.erb
@@ -47,7 +47,7 @@
 			</div>
 			<div class="col-md-3">
 			<!-- removed random for now -->
-				<%= select_tag(:category, options_for_select([['Funny', 'funny'], ['Cool', 'cool'], ['Cute', 'cute'], ['Weird', 'weird']])) %>
+				<%= select_tag(:category, options_for_select([['Funny', 'funny'], ['Cool', 'cool'], ['Cute', 'cute'], ['Weird', 'weird'], ['Random', 'random']])) %>
 			</div>
 		</div>
 		
