--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -111,7 +111,7 @@
 
 				<div class="col-md-4 middle">
 					<div class="row three-button-group">
-						<div class="fb-share-button" data-href="http://facebook.com" data-type="button"></div>
+						<div class="fb-share-button" data-href="" data-type="button"></div>
 					</div>
 					<div class="row three-button-group">
 						<button type="button" class="btn btn-default btn-sm">
