--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -131,7 +131,7 @@
 				permalink = response["permalink"];
 
 
-				$("#fbposition").html("<div class='fb-share-button' data-href='" + permalink + "'' data-type='button'></div>");
+				$("#fbposition").html("<div class='fb-share-button' data-href='" + permalink + "' data-type='button'></div>");
 
 					
 			}
