one last facebook attempt

--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -57,6 +57,7 @@
 
 				<div class="col-md-4 middle">
 					<div class="row three-button-group" id="fbposition">
+						<div class="fb-share-button" data-href="" data-type="button"></div>
 						
 					</div>
 					<div class="row three-button-group">
@@ -131,9 +132,10 @@
 				permalink = response["permalink"];
 
 
-				$("#fbposition").html("<div class='fb-share-button' data-href='" + permalink + "' data-type='button'></div>");
-
-					
+				$(".fb-share-button").attr("data-href", permalink);
+				if (FB) {
+					FB.XFBML.parse();
+				}
 			}
 		});
 	};
