--- a/app/views/dynamic_pages/view.html.erb
+++ b/app/views/dynamic_pages/view.html.erb
@@ -129,7 +129,7 @@ function newContent() {
 			}
 
 			permalink = response["permalink"];
-
+			alert(permalink);
 
 			$("#fbposition").html("<div class='fb-share-button' data-href='" + permalink + "' data-type='box_count'></div>");
 		}
